# gnome-online-accounts-gtk

./: .gitignore  README.md  gnome-online-accounts-gtk.pot  makepot  meson.build  meson_options.txt
.github/workflows/: build.yml
data/: gnome-online-accounts-gtk.desktop.in.in  meson.build  style.css
debian/: changelog  control  copyright  gnome-online-accounts-gtk.install  rules
po/: LINGUAS  POTFILES.in  am.po  ar.po  ast.po  be.po  bg.po  br.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  gl.po  he.po  hi.po  hu.po  ia.po  id.po  is.po  it.po  ja.po  ka.po  kn.po  ko.po  lt.po  ml.po  mnw.po  ms.po  msgids  (+21 more)
src/: gnome-online-accounts-gtk.c  gnome-online-accounts-gtk.gresource.xml  meson.build  online-accounts-info.ui  online-accounts.ui
